--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div>
-    <nav>
+    <!--<nav>
         <a routerLink="/about" routerLinkActive="active">About</a>
     </nav>
-    <router-outlet></router-outlet>
+    <router-outlet></router-outlet>-->
 </div>
