--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,5 @@
-<div>
-    
-</div>
+<p-menubar [model]="items"></p-menubar>
+<!--<nav>
+    <a routerLink="/about" routerLinkActive="active">About</a>
+</nav>-->
+<router-outlet></router-outlet>
